# ws

./: .gitignore  .pixi.sh  CLAUDE.md  README.md  colcon  env.sh  maybe-requirements.md  pixi-ros.txt  pixi.toml  system.sh  ws.repos
config/: cam.yaml  submodules.md
config/camera_info/: logitech_webcam_c930e.yaml  low.yaml  over.yaml  side.yaml  video8.yaml
docs/: XARM.md
setup/camera/: README.md  cams.md
src/xnodes/: __init__.py
src/xnodes/core/: __init__.py  quat.py
src/xnodes/nodes/: __init__.py
src/xnodes/nodes/stereo/: __init__.py
src/xnodes_bringup/: package.xml  setup.cfg  setup.py
src/xnodes_bringup/launch/: bringup.launch.py
src/xnodes_bringup/xnodes_bringup/: __init__.py
src/xnodes_camera/: package.xml  setup.cfg  setup.py
src/xnodes_camera/config/: camera.yaml
src/xnodes_camera/launch/: camera.launch.py
src/xnodes_camera/xnodes_camera/: __init__.py  camera_node.py
tools/: __init__.py  mini_colcon.py
