<?xml version="1.0"?>
<package format="3">
  <name>xnodes_camera</name>
  <version>0.1.0</version>
  <description>Lightweight camera pipeline node used to exercise the workspace build.</description>
  <maintainer email="maintainers@example.com">Workspace Maintainers</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
